--- a/style.css
+++ b/style.css
@@ -68,6 +68,53 @@
 
  }
 
+ .show {
+
+  display: grid;
+  height: 75%;
+  width: 78%;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 200px 200px 200px 200px 200px;
+  margin: 2%;
+  border: 12px solid rgba(255, 255, 255, 0.75);
+
+ }
+
+ .image {
+
+    background-color: black;
+    grid-column-start: 1;grid-column-end: 9; grid-row-start: 1; grid-row-end: 4;
+ }
+
+ .important {
+  color: white;
+  background-color: #DF691A;
+  grid-column-start: 9;grid-column-end: 12; grid-row-start: 1; grid-row-end: 4;
+ }
+
+ .icones{
+  
+  margin: 10px;
+  padding: 10px;
+  color: #DF691A;
+  
+  background-color:rgba(255, 255, 255, 0.75);
+  grid-column-start: 1;grid-column-end: 9; grid-row-start: 4; grid-row-end: 4;
+  border-radius: 30%;
+ }
+ .description{
+  padding: 10px;
+  background-color:rgba(255, 255, 255, 0.75);
+  grid-column-start: 9;grid-column-end: 12; grid-row-start: 4; grid-row-end: 4;
+ }
+ .autres {
+   padding: 10px;
+   text-justify: auto;
+  color: #DF691A;
+  background-color:rgba(255, 255, 255, 0.75);
+  grid-column-start: 1;grid-column-end: 12; grid-row-start: 5; grid-row-end: 5;
+ }
+
  body {
    margin: 0;
    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -82,11 +129,12 @@
  .banner{
 
   padding: 15px;
-  margin: 100px;
+  margin: 10px;
   background-color: rgba(255, 255, 255, 0.75);
   color: #DF691A;
   font-size: 24px;
   border-radius: 20px;
+  width: 100%;
 
  }
 
@@ -4452,6 +4500,9 @@
            justify-content: space-between;
    padding: 0.75rem 1rem;
    font-family: 'Cookie', cursive;
+   background-color: #DF691A;
+   border: 5px #DF691A solid;
+   border-radius: 25px;
  }
  
  .navbar > .container,
